# datadecentral

./: .gitignore  Makefile  README.md  pelicanconf.py  pyproject.toml
.github/workflows/: pelican.yml
