[tool.poetry]
name = "datadecentral"
version = "0.1.0"
description = "A static site for Data Packages"
authors = ["Oleg Lavrovsky <datalets@pm.me>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3"
pelican = "^4.5.0"
datapackage = "^1.15.0"
ckan = "^2.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
